...
                  onPressed: () {
                    setState(() {
                      oz = double.parse(_controller.text);
                      g = Converter.ounces_to_grams(oz);
                    });
                  },
                  child: const Text("Convert", style: TextStyle(fontSize: 18))),

              // DISPLAY METERS
              Padding(
                  padding: EdgeInsets.all(20),
                  child:
                      Text("Grams: ${g}", style: const TextStyle(fontSize: 18)))
...
